adding strava service and config

--- a/libs/client/strava/feature/src/lib/stravalink/stravalink.component.html
+++ b/libs/client/strava/feature/src/lib/stravalink/stravalink.component.html
@@ -30,38 +30,14 @@
                 <br />
 
                 <div class="submitButton mt-3">
-                    <button id="linkStrava" class="text-center ml-1" mat-raised-button color="primary">Link Strava</button>
+                    <button type="button" (click)="LinkToStrava()" id="linkStrava" class="text-center ml-1" mat-raised-button color="primary">Link Strava</button>
                 </div>
                 <div class="submitButton mt-3">
-                    <button id="linkLater" class="text-center ml-1" mat-raised-button color="primary">Add Manually/Link Later</button>
+                    <button type="button" (click)="NoLinking()" id="linkLater" class="text-center ml-1" mat-raised-button color="primary">Add Manually/Link Later</button>
                 </div>
 
-                <!-- <mat-label>Add activities: </mat-label>
-                <br />
-                <mat-hint>These will be updated as you do activities later</mat-hint>
-                <br />
-  
-                <mat-checkbox (change)="updateError()" class="mt-2" formControlName="running">Running</mat-checkbox>
-                <br />
-                <mat-checkbox (change)="updateError()" formControlName="riding">Riding</mat-checkbox>
-                <br />
-                <mat-checkbox (change)="updateError()" formControlName="swimming">Swimming</mat-checkbox>
-                <br />
-                <mat-checkbox (change)="updateError()" formControlName="weightLifting">Weight Lifting</mat-checkbox>
-  
-                <mat-error *ngIf="noActivityChosen">At least one activity is required</mat-error>
-  
-                <mat-form-field class="example-full-width mt-4" appearance="outline">
-                  <mat-label>Athlete Bio</mat-label>
-                  <textarea formControlName="bio" [maxLength]="150" matInput placeholder="I love the outdoors and going on adventures..."></textarea>
-                  <mat-hint [align]="'end'">30 characters minimum</mat-hint>
-                  <mat-error>Bio must be at least 30 characters long</mat-error>
-                </mat-form-field>
-  
-                <div class="submitButton mt-3">
-                    <button (click)="save()" id="signup" class="text-center ml-1" mat-raised-button color="primary">Save</button>
-                </div> -->
-    
+                <mat-error *ngIf="OAuthError">OAuth failed</mat-error>
+
               </form>
     
             </mat-card-content>
