working strava OAuth
Almost all code is complete for the strava linking, just some small error validation needed on the strava/link page during async function execution to inform the user what is going on.

--- a/libs/client/strava/feature/src/lib/stravalink/stravalink.component.html
+++ b/libs/client/strava/feature/src/lib/stravalink/stravalink.component.html
@@ -37,6 +37,7 @@
                 </div>
 
                 <mat-error *ngIf="OAuthError">OAuth failed</mat-error>
+                <mat-error *ngIf="loading">loading</mat-error>
 
               </form>
     
