Adding libs and components for manual activity and schedule workout

--- a/libs/client/signup/feature/src/lib/signup/signup.component.scss
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.scss
@@ -75,7 +75,7 @@ p {
 }
 
 #background {
-    height: 100vh;
+    height: 100vh !important;
     background-size: cover;
     background-repeat: no-repeat;
 }
