--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -12,9 +12,9 @@
   
               <h1 class="text-center">LOGO HERE</h1>
 
-              <mat-label>Add activities: </mat-label>
+              <mat-label>Add Activities: </mat-label>
               <br />
-              <mat-hint>These will be updated as you do activities later</mat-hint>
+              <mat-hint>These will be updated as you do activities later.</mat-hint>
               <br />
 
               <mat-checkbox (change)="updateError()" class="mt-2" formControlName="running">Running</mat-checkbox>
@@ -26,6 +26,29 @@
               <mat-checkbox (change)="updateError()" formControlName="weightLifting">Weight Lifting</mat-checkbox>
 
               <mat-error *ngIf="noActivityChosen">At least one activity is required</mat-error>
+
+              <br *ngIf="!noActivityChosen" />
+              <br *ngIf="!noActivityChosen" />
+              <mat-label>Buddy Distance:</mat-label>
+              <br />
+              <mat-hint>This is how far away a buddy can be and match with you (This can be updated later)</mat-hint>
+
+              <div class="grid grid-flow-row-dense grid-cols-8">
+
+                <div class="col-span-7">
+                  <mat-slider
+                  (input)="sliderMove($event.value)"
+                  step="2"
+                  min="2"
+                  max="50"
+                  aria-label="units"></mat-slider>
+                </div>
+
+                <div class="content-center">
+                  <div class="mt-3 ml-1"><mat-label>{{ radius }}km</mat-label></div>
+                </div>
+
+              </div>
 
               <mat-form-field class="example-full-width mt-4" appearance="outline">
                 <mat-label>Athlete Bio</mat-label>
