--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
@@ -72,11 +72,6 @@ mat-form-field {
     justify-content: flex-end;
 }
 
-.b { color: #4285F4; }
-.r { color: #EA4335; }
-.y { color: #FBBC05; }
-.g { color: #34A853; }
-
 p {
     font-size: 12px !important;
 }
@@ -107,12 +102,23 @@ textarea {
     max-height: 12vh !important;
 }
 
-// ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element .checkActivity {
-//     opacity: 0.03 !important;
-//     background-color: #005691!important;
-// }
-
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background, 
 .mat-checkbox-indeterminate .mat-checkbox-background {
   background-color: #1b1A1b !important;
+}
+
+::ng-deep .mat-slider-thumb {
+	background-color: #1b1A1b !important;
+}
+
+::ng-deep .mat-slider-thumb-label {
+	background-color: #1b1A1b !important;
+}
+
+::ng-deep .mat-slider-track-fill {
+	background-color: #1b1A1b !important;
+}
+
+mat-slider {
+    width: 100%;
 }
