--- a/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
+++ b/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
@@ -1,1 +1,3 @@
-<p>scheduleworkout works!</p>
+<training-buddy-signed-navbar></training-buddy-signed-navbar>
+
+<training-buddy-navbar></training-buddy-navbar>
