--- a/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
+++ b/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
@@ -86,7 +86,7 @@
                     <!-- riding measured with distance and km/h -->
                     <mat-form-field appearance="outline" class="col-span-1">
                         <mat-label>Speed</mat-label>
-                        <input formControlName="kmph" id="kmph" matInput type="number" placeholder="km/h" name="kmph">
+                        <input (click)="calculateDuration()" formControlName="kmph" id="kmph" matInput type="number" placeholder="km/h" name="kmph">
                     </mat-form-field>
                 </div>
 
@@ -106,6 +106,11 @@
                             <input formControlName="minutes" id="minutes" matInput type="number" name="minutes">
                         </mat-form-field>
                     </div>
+                </div>
+
+                <!-- calculated activity duration -->
+                <div *ngIf="!isWeightLifting">
+                    
                 </div>
 
                 <div class="submitButton mt-3">
