Adding libs and components

--- a/libs/client/addmanualactivity/feature/src/lib/addmanualactivity/addmanualactivity.component.html
+++ b/libs/client/addmanualactivity/feature/src/lib/addmanualactivity/addmanualactivity.component.html
@@ -1,10 +1,10 @@
-<div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
+<!-- <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}"> -->
 
     <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
     
-    <mat-grid-list cols="1" rows="1" rowHeight="2:1">
+    <mat-grid-list cols="1" rows="1" rowHeight="2:1" >
     
-        <mat-card>
+        <mat-card id="grid">
     
             <mat-card-content>
     
@@ -97,4 +97,4 @@
 
     <training-buddy-navbar></training-buddy-navbar>
     
-</div>
+<!-- </div> -->
