--- a/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
+++ b/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
@@ -1,4 +1,4 @@
-<div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
+<!-- <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}"> -->
 
     <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
     
@@ -128,4 +128,4 @@
 
     <training-buddy-navbar></training-buddy-navbar>
     
-</div>
+<!-- </div> -->
