adding profile page

--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -37,6 +37,11 @@
       
         <mat-card-content>
 
+            <div class="flex">
+                <mat-icon routerLink="/profile" class="flex-none">arrow_back_ios</mat-icon>
+                <div class="flex-auto pr-2"><h1 id="title">Settings</h1></div>
+            </div>
+
             <section>
                 <mat-card routerLink="/editprofile" class="option my-3">
                     <mat-grid-list cols="5" rowHeight="2:1">
