--- a/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
@@ -4,5 +4,5 @@
     <mat-icon> chat_bubble</mat-icon>
     <mat-icon (click)="route('/addactivity')">add_circle</mat-icon>
     <mat-icon (click)="route('/scheduleworkout')">calendar_today</mat-icon>
-    <mat-icon (click)="route('/settings')">person</mat-icon>
+    <mat-icon (click)="route('/profile')">person</mat-icon>
 </mat-toolbar>
