working settings and profile

--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -1,1 +1,31 @@
-<p>viewprofilepage works!</p>
+<training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
+
+    <mat-grid-list cols="1" rows="1" rowHeight="2:1" >
+    
+        <mat-card id="grid">
+    
+            <mat-card-content>
+    
+               <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl">
+                    <div class="">
+                        <div class="shrink-0">
+                            <img class="object-cover h-full w-full" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/5.jpg?raw=true">
+                        </div>
+                        <div class="mx-4 mb-3 mt-2">
+                            <div class="acceptTitle">
+                                <h1 class="block mt-1 text-2xl leading-tight font-medium text-black">Sarah King</h1> 
+                            </div> 
+                            <div class="tracking-wide text-xs font-semibold">Hatfield, Pretoria</div>
+                            <p class="mt-2 text-slate-500">I'm an avid cyclist - I especially enjoy long distance mountain biking. Looking for friends to join an adventurous cycling group.</p>
+                            <mat-icon> directions_run</mat-icon><mat-icon> directions_bike</mat-icon>
+                        </div>
+                    </div>
+                </div>
+    
+            </mat-card-content>
+    
+          </mat-card>
+    
+    </mat-grid-list>
+
+<training-buddy-navbar></training-buddy-navbar>
