--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -1,6 +1,6 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
 
-    <mat-grid-list cols="1" rows="1" rowHeight="2:1" >
+    <mat-grid-list cols="1" rows="2" rowHeight="2:1" >
     
         <mat-card id="grid">
     
@@ -21,11 +21,35 @@
                         </div>
                     </div>
                 </div>
+
+                <div class=" mt-3 ml-3 acceptTitle">
+                    <h2 class="block mt-1 text-2xl leading-tight font-medium text-black">Activity Logs:</h2> 
+                </div>
+
+                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                     activity
+                </div>
+                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                    activity
+               </div>
+               <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                activity
+           </div>
+           <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+            activity
+       </div>
+       <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+        activity
+   </div>
+   <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+    activity
+</div>
     
             </mat-card-content>
     
-          </mat-card>
-    
+        </mat-card>
+
     </mat-grid-list>
+
 
 <training-buddy-navbar></training-buddy-navbar>
