--- a/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
+++ b/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
@@ -11,6 +11,11 @@ mat-card {
     background-color: rgba(255, 255, 255, 1);
 }
 
+mat-spinner {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .text-center {
     text-align: center;
 }
