--- a/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
+++ b/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
@@ -14,6 +14,12 @@ mat-card {
 mat-spinner {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 9%;
+    margin-bottom: 4%;
+}
+
+:host ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {   
+    stroke: #FC4C02;
 }
 
 .text-center {
