--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -6,7 +6,7 @@
     
             <mat-card-content>
     
-               <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl">
+               <div class="max-w-md bg-white rounded-xl shadow-md overflow-hidden max-w-2xl">
                     <div class="">
                         <div class="shrink-0">
                             <img class="object-cover h-full w-full" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/5.jpg?raw=true">
@@ -26,24 +26,19 @@
                     <h2 class="block mt-1 text-2xl leading-tight font-medium text-black">Activity Logs:</h2> 
                 </div>
 
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-                     activity
+                <div *ngFor="let ac of logList" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                    <div class="mt-3 ml-3">
+                        <div class="flex">
+                            <h4>{{ ac.name }}</h4>
+                            <h4>{{ ac.date }}</h4>
+                        </div>
+                        <div class="flex">
+                            <h4>{{ ac.time }}</h4>
+                            <h4>{{ ac.distance }}</h4>
+                            <h4>{{ ac.speed }}</h4>
+                        </div>
+                    </div>
                 </div>
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-                    activity
-               </div>
-               <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-                activity
-           </div>
-           <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-            activity
-       </div>
-       <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-        activity
-   </div>
-   <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-    activity
-</div>
     
             </mat-card-content>
     
