--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -27,12 +27,12 @@
                 </div>
 
                 <div *ngFor="let ac of logList" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-                    <div class="mt-3 ml-3">
-                        <div class="flex">
-                            <h4>{{ ac.name }}</h4>
+                    <div class="m-3">
+                        <div class="flex justify-around">
+                            <h4><strong>{{ ac.name }}</strong></h4>
                             <h4>{{ ac.date }}</h4>
                         </div>
-                        <div class="flex">
+                        <div class="flex justify-between">
                             <h4>{{ ac.time }}</h4>
                             <h4>{{ ac.distance }}</h4>
                             <h4>{{ ac.speed }}</h4>
