--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -40,3 +40,11 @@ mat-icon:hover {
     color: rgb(207, 63, 63);
     font-size: 28px;
 }
+
+#filter {
+    width: 100% !important;
+}
+
+#noresults {
+    width: 100% !important;
+}
