--- a/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar>
     <!-- <mat-icon (click)="route('/dashboard')">dashboard</mat-icon> -->
     <mat-icon (click)="route('/dashboard')">home</mat-icon>
-    <mat-icon> chat_bubble</mat-icon>
+    <!-- <mat-icon> chat_bubble</mat-icon> -->
     <mat-icon (click)="route('/addactivity')">add_circle</mat-icon>
     <mat-icon (click)="route('/scheduleworkout')">calendar_today</mat-icon>
     <mat-icon (click)="route('/profile')">person</mat-icon>
+    <mat-icon (click)="route('/settings')">settings</mat-icon>
 </mat-toolbar>
