--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -17,7 +17,7 @@
                             </div> 
                             <div class="tracking-wide text-xs font-semibold">{{ displayUser.location }}</div>
                             <p class="mt-2 text-slate-500">{{ displayUser.bio }}</p>
-                            <p class="mt-2 text-slate-500">{{ getSportString(usr) }}</p>
+                            <p class="mt-2 text-slate-500">{{ getSportString(displayUser) }}</p>
 
                             
                         </div>
