view profile fix

--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -13,11 +13,11 @@
                         </div>
                         <div class="mx-4 mb-3 mt-2">
                             <div class="acceptTitle">
-                                <h1 class="block mt-1 text-2xl leading-tight font-medium text-black">{{ displayUser.userName }} {{ displayUser.userSurname }}</h1> 
+                                <h1 class="block mt-1 text-2xl leading-tight font-medium text-black"> displayUser.userSurname   displayUser.userSurname </h1> 
                             </div> 
-                            <div class="tracking-wide text-xs font-semibold">{{ displayUser.location }}</div>
-                            <p class="mt-2 text-slate-500">{{ displayUser.bio }}</p>
-                            <p class="mt-2 text-slate-500">{{ getSportString(displayUser) }}</p>
+                            <div class="tracking-wide text-xs font-semibold"> displayUser.location </div>
+                            <p class="mt-2 text-slate-500"> displayUser.bio </p>
+                            <p class="mt-2 text-slate-500"> getSportString(displayUser) </p>
 
                             
                         </div>
