--- a/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.scss
+++ b/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.scss
@@ -6,10 +6,11 @@ mat-card {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -0%);
+    transform: translate(-50%, 8%);
     background-color: rgba(255, 255, 255, 1);
+
   }
-  
+
   #background {
     height: 100vh;
     background-size: cover;
@@ -28,6 +29,7 @@ mat-card {
     display: block;
   }
   
+
   #save {
     width: 100%;
     background-color: #1b1a1b !important;
@@ -59,5 +61,6 @@ mat-card {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin-bottom: 140px;
   }
   
